--- a/MonitoringAppAPI/MonitoringAppAPI.csproj
+++ b/MonitoringAppAPI/MonitoringAppAPI.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.28.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OpenTelemetry" Version="1.9.0" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
+    <PackageReference Include="Proto.OpenTelemetry" Version="1.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
