--- a/MonitoringAppAPI/MonitoringAppAPI.csproj
+++ b/MonitoringAppAPI/MonitoringAppAPI.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="OpenTelemetry" Version="1.9.0" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
     <PackageReference Include="Proto.OpenTelemetry" Version="1.7.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
