Configure redis and database

--- a/MonitoringAppAPI/appsettings.json
+++ b/MonitoringAppAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Farhan_S\\SQLEXPRESS;Database=monitoredapps;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  }
 }
